# SiliconShade

./: .gitignore  CLAUDE.md  CMakeLists.txt  GEMINI.md  LICENSE  PLAN.md  README.md
.claude/agent-memory/game-engine-architect/: MEMORY.md  project_critical_risks.md  project_retro3d.md
.claude/agent-memory/project-task-manager/: MEMORY.md  project_retro3d.md  project_retro3d_audit_summary.md
.claude/agent-memory/test-pyramid-engineer/: MEMORY.md  bugs_and_patterns.md  project_retro3d.md  test_framework_conventions.md
.claude/agents/: game-engine-architect.md  project-task-manager.md  test-pyramid-engineer.md
assets/chest/: materials.mtl
doc/: architecture_audit.md  functional_target.md  tasks.md  test_audit.md
engine/: CMakeLists.txt
engine/include/retro3d/core/: App.h  Engine.h  Input.h  Memory.h  ThreadPool.h
engine/include/retro3d/render/: Model.h  Rasterizer.h  Texture.h
engine/src/core/: App.cpp  Engine.cpp  Input.cpp  ThreadPool.cpp
engine/src/render/: Model.cpp  Texture.cpp
examples/: CMakeLists.txt
examples/chest_viewer/: CMakeLists.txt  main.cpp
examples/crypt_crawler/: CMakeLists.txt  README.md  main.cpp
include/retro3d/core/: App.h  Basic.h  Math.h  Memory.h  ThreadPool.h
include/retro3d/render/: Draw.h  Rasterizer.h
src/core/: App.cpp  Memory.cpp  ThreadPool.cpp  main.cpp
src/render/: Draw.cpp  Model.cpp  Texture.cpp
tests/: test_engine.cpp  test_math.cpp  test_memory.cpp  test_model.cpp  test_texture.cpp  test_threads.cpp
